Try fix 1.20 build